@@ -572,6 +572,8 @@ lang.css.tokens.colours.format yellow bold
 lang.css.tokens.long_comments.open \/\*
 lang.css.tokens.long_comments.close \*\/
 lang.css.tokens.long_comments.format 8 bold
+lang.css.comment_string /* 
+lang.css.comment_close_string  */
 lang.css.tokens.numbers \b([0-9]+\.[0-9]+|[0-9]+)
 lang.css.tokens.numbers.format blue bold
 lang.css.tokens.units [^A-Za-z](em|pt|px)\b
